--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -5,6 +5,18 @@
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd">
   <display-name>Archetype Created Web Application</display-name>
+  <filter>
+  <filter-name>charEncoding</filter-name>
+  <filter-class>org.springframework.web.filter.CharacterEncodingFilter</filter-class>
+  <init-param>
+    <param-name>encoding</param-name>
+    <param-value>utf-8</param-value>
+  </init-param>
+</filter>
+<filter-mapping>
+<filter-name>charEncoding</filter-name>
+<url-pattern>/*</url-pattern>
+</filter-mapping>
   <!-- 如果web.xml中存在listener   filter 和servlet ，顺序是监听器，过滤器，servlet-->
   <!-- spring监听器 开始 -->
   <listener>
